# antcrew-platform

./: .dockerignore  .env.dev.example  .env.example  .env.int.example  .env.prod.example  .env.uat.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.int.yml  docker-compose.prod.yml  docker-compose.uat.yml  docker-compose.yml  fly.int.toml  fly.prod.toml  fly.uat.toml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  test-postgres.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_eval_runs.py  003_template_hitl.py  004_eval_schedule.py  005_reviewer_budget.py  006_drop_budget_exceeded.py  007_eval_run_id.py  008_workspace_membership.py  009_missing_fields.py  010_hitl_assignees.py  011_audit_email.py  012_api_key_prefix.py  013_byok.py  014_billing_provider.py  015_llm_provider_base_url.py  016_workspace_is_trial.py  017_pipeline_definitions.py  018_run_client_label.py  019_hitl_client_token.py  020_compare_run.py  021_eval_regression_id.py
app/: main.py
app/api/: api_keys.py  billing.py  client_review.py  compare.py  engine.py  eval_schedules.py  evals.py  pipeline.py  pipelines.py  reviews.py  runs.py  stream.py  templates.py  tickets.py  webhook_mor.py  workspaces.py  workspaces_byok.py  workspaces_members.py
app/core/: auth.py  byok.py  channel.py  database.py  listener.py  rate_limit.py  security.py  slack_hitl.py
app/models/: __init__.py  run.py
app/services/: billing.py  email.py  engine_runner.py  eval_runner.py  export.py  pipeline_builder.py  runner.py  runs.py  webhook.py
app/static/: app.js  evals.html  index.html  landing.html  onboard.html  pipelines.html  pricing.html  privacy.html  reviews.html  run.html  settings.html  style.css  tickets.html  tos.html  trial.html  webhooks.html
scripts/: check_migrations.py
tests/: conftest.py  test_api.py  test_artifacts_evals.py  test_auth.py  test_engine_artifacts.py  test_hitl.py  test_listener.py  test_new_features.py  test_ola3.py  test_pipeline.py  test_round10.py  test_round11.py  test_round12.py  test_round13.py  test_round14.py  test_round15.py  test_round16.py  test_round17.py  test_round18.py  test_round5.py  test_round6.py  test_round7.py  test_round8.py  test_round9.py  test_services.py  test_templates.py  test_v2_api.py  test_workspaces.py
