[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "antcrew-platform"
version = "0.4.0"
description = "Production backend for antcrew multi-agent pipelines: REST API, HITL review queue, evaluations, model diff, and dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Iago Pueyo", email = "iago.pueyo99@gmail.com" }]
keywords = ["ai", "agents", "llm", "multi-agent", "antcrew", "fastapi", "hitl", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.21",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "bcrypt>=4.0",
    "antcrew>=0.33.5,<0.34",
    "antcrew-engine>=0.3.5,<0.4",
]

[project.optional-dependencies]
billing = [
    "stripe>=7.0",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "cryptography>=41.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # SQLModel warns on session.execute(); we use it intentionally for raw SQL aggregate queries
    "ignore:.*session.execute.*:DeprecationWarning",
]
